syntax = "proto3";

package osprey.rpc.common.v1;

import "google/protobuf/timestamp.proto";

// ~ osprey post-execution result ~
message ExecutionResult {
    uint64 action_id = 1;
    string action_name = 2;
    string action_data_json = 3;
    string extracted_features_json = 4;
    string error_traces_json = 5;
    bool sync = 6;
    google.protobuf.Timestamp timestamp = 7;
}
